Change: css to remove the li elements on privacy targeted too much. Fixed

--- a/static/css/privacy.css
+++ b/static/css/privacy.css
@@ -1,4 +1,4 @@
-li {
+.no-bullet {
     /* hide the li bullets on about page */
-    display:none;
+    list-style: none;
 }
